--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header class="header">
     <h1>Web API Quiz</h1>
+    <p class="timerp"><span id= "timer"></span></p>
   </header>
 
   <Main>
@@ -34,19 +35,6 @@
     
   </Main>
   
-
-  
-
-
-
-
-
-
-
-
-
-
-
 
   <script src="script.js"></script>
 </body>
