--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
     </div>
-
-
-    
-    
   </Main>
+
   
+  <!-- <section class="initial">
+    <div>
+      <p>Please record your score with your initials!</p>
+      <textarea id="init" cols="8" rows="2"></textarea>
+    </div>
+  </section> -->
+
 
   <script src="script.js"></script>
 </body>
+
+
+
 </html>
